syntax = "proto3";

package api.v1.services.helloworld;

import "errors/errors.proto";

option go_package = "api/v1/services/helloworld;helloworld";
option java_multiple_files = true;
option java_package = "com.origadmin.api.v1.services.helloworld";

enum HelloWorldErrorReason {
  option (errors.default_code) = 500;
  HELLO_WORLD_ERROR_REASON_GREETER_UNSPECIFIED = 0;
  HELLO_WORLD_ERROR_REASON_USER_NOT_FOUND = 1;
}
